# etsy-ai-growth-agent

./: .gitignore  README.md  docker-compose.yml  etsy-agent-prompt.md  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: celery_app.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  encryption.py  security.py
backend/app/db/: session.py
backend/app/schemas/: agent.py  auth.py  listing.py  seo.py  store.py
backend/app/services/: ai_service.py  credit_service.py  email_service.py  etsy_client.py  etsy_token_service.py  etsy_validation.py  notification_service.py  paddle_service.py  rate_limiter.py
backend/app/tasks/: agent.py  health.py  seo.py  sync.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_users_auth.py  0002_stores_listings.py  0003_agent_runs_seo_analyses.py  0004_listing_optimizations.py  0005_billing.py  0006_notifications.py  0007_seo_optimized_description.py  0008_image_alt_seo.py  0009_drop_image_alt.py
backend/scripts/: grant_credits.py
backend/tests/: conftest.py  fake_db.py  test_agent_api.py  test_ai_service.py  test_billing_api.py  test_credit_service.py  test_daily_agent.py  test_e2e_value_loop.py  test_encryption.py  test_etsy_client.py  test_etsy_validation.py  test_listings_api.py  test_notifications.py  test_oauth_callback.py  test_onboarding.py  test_optimizations_api.py  test_paddle_webhook.py  test_rate_limiter.py  test_routes_registered.py  test_security.py  test_seo_analyzer.py  test_seo_api.py  test_seo_task.py  test_sync.py  test_token_service.py
(+77 files in other folders)
